Adiciona header e footer institucionais com estilos visuais

--- a/faq-pergunta.html
+++ b/faq-pergunta.html
@@ -10,15 +10,23 @@
 
     <body>
         <header class="header--instituto">
-
+            <nav class="nav--instituto" aria-label="Navegação principal">
+                <img src="./IMG/logo-imrea.png" alt="Logo Instituto de Medicina Física e Reabilitação HC FMUSP" class="header--logo">
+                <section class="header--titulo">
+                    <h1 class="header--instituto-nome">INSTITUTO DE<br>MEDICINA FÍSICA E<br><span class="header--instituto-reabilitacao">REABILITAÇÃO</span></h1>
+                    <span class="header--instituto-sub">HC FMUSP</span>
+                </section>
+            </nav>       
         </header>
 
         <main class="main--conteudo">
-
+            
         </main>
         
         <footer class="footer--instituto">
-
+            <section class="footer--info">
+                <span>© 2024  HC-FMUSP. Todos os direitos reservados. | <a href="#" class="footer--privacidade">Política de Privacidade</a></span>
+            </section>            
         </footer>
     </body>
 </html>
