Adiciona página de contatos com informações institucionais e links de comunicação, incluindo cards estilizados e layout responsivo para melhor visualização em dispositivos móveis

--- a/contatos.html
+++ b/contatos.html
@@ -16,17 +16,30 @@
                     <h1 class="header--instituto-nome">INSTITUTO DE<br>MEDICINA FÍSICA E<br><span class="header--instituto-reabilitacao">REABILITAÇÃO</span></h1>
                     <span class="header--instituto-sub">HC FMUSP</span>
                 </section>
-            </nav>       
+            </nav>
         </header>
 
         <main class="main--conteudo">
-            
+            <article class="article--contatos">
+                <section class="section--contatos-mensagem">
+                    <h2 class="section--contatos-titulo">Contatos</h2>
+                    <p class="section--contatos-texto">Visite nosso site principal, ou nos contate através dos nossos canais</p>
+                </section>
+                <aside class="aside--contatos-lista">
+                    <div class="contatos--retangulo"><strong>Site Principal:</strong> <a href="https://redelucymontoro.org.br/site/" target="_blank">https://redelucymontoro.org.br/site/</a></div>
+                    <div class="contatos--retangulo"><strong>Endereço de E-mail:</strong> <a href="mailto:imreaofc@gmail.com">imreaofc@gmail.com</a></div>
+                    <div class="contatos--retangulo"><strong>Telefone:</strong> <a href="tel:+5511999999999">+55 11 9999-9999</a></div>
+                </aside>
+                <div class="contatos--botoes">
+                    <a href="menu.html" class="button--voltar-link"><button class="button--voltar" type="button">Voltar</button></a>
+                </div>
+            </article>
         </main>
-        
+
         <footer class="footer--instituto">
             <section class="footer--info">
                 <span>© 2024  HC-FMUSP. Todos os direitos reservados. | <a href="#" class="footer--privacidade">Política de Privacidade</a></span>
-            </section>            
+            </section>
         </footer>
     </body>
 </html>
