--- a/faq-pergunta.html
+++ b/faq-pergunta.html
@@ -10,15 +10,38 @@
 
     <body>
         <header class="header--instituto">
-
+            <nav class="nav--instituto" aria-label="Navegação principal">
+                <img src="./IMG/logo-imrea.png" alt="Logo Instituto de Medicina Física e Reabilitação HC FMUSP" class="header--logo">
+                <section class="header--titulo">
+                    <h1 class="header--instituto-nome">INSTITUTO DE<br>MEDICINA FÍSICA E<br><span class="header--instituto-reabilitacao">REABILITAÇÃO</span></h1>
+                    <span class="header--instituto-sub">HC FMUSP</span>
+                </section>
+            </nav>
         </header>
 
         <main class="main--conteudo">
+            <article class="article--faq-pergunta">
+                <section class="section--faq-pergunta-mensagem">
+                    <h2 class="section--faq-pergunta-titulo">FAQ - Realize uma pergunta</h2>
+                    <p class="section--faq-pergunta-texto">Digite qual a sua dúvida no campo abaixo:</p>
+                </section>
 
+                <aside class="aside--faq-pergunta-form">
+                    <textarea class="faq--textarea" placeholder="Digite aqui..."></textarea>
+                </aside>
+                
+                <div class="faq--botoes">
+                    <a href="faq.html" class="button--voltar-link"><button class="button--voltar" type="button">Voltar</button></a>
+                    <button class="button--cadastro" type="submit">Cadastrar Pergunta</button>
+                </div>
+            </article>
         </main>
         
         <footer class="footer--instituto">
-
+            <section class="footer--info">
+                <span>© 2024  HC-FMUSP. Todos os direitos reservados. | <a href="#" class="footer--privacidade">Política de Privacidade</a></span>
+            </section>
         </footer>
+        <script src="JS/script-faq-pergunta.js"></script>
     </body>
 </html>
